# komuzik

./: .dockerignore  .env.example  .gitignore  DOWNLOAD_LIMIT.md  Dockerfile  README.md  config.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml  test_limiter.py
data/: .gitkeep
src/komuzik/: config.py  config_loader.py  database.py  download_limiter.py  downloaders.py  handlers.py  main.py  repository.py
