[project]
name = "komuzik"
version = "0.1.0"
description = ""
authors = [
    {name = "Kotaz",email = "semechkagent@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "yt-dlp (>=2025.3.31,<2026.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pyrogram[asyncio] (>=2.0.0,<3.0.0)", # Добавляем Pyrogram
    "tgcrypto", # Нужен для Pyrogram
    "telethon (>=1.33.0,<2.0.0)" # Client API for Telegram with large file support
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false